--- a/main.html
+++ b/main.html
@@ -105,16 +105,21 @@
 
 <script>
 		let animdiv = document.getElementById("the-div");
+		let replace_child = 
 		
 		setTimeout(() => {
 			let newp = document.createElement("p");
 			
 			newp.style.position = "absolute";
-			newp.style.top = "-5em";
+			newp.style.top = "-.5em";
 			newp.style.left = "-.3ch";
 			newp.innerHTML = "Q";
 			
-			animdiv.innerHTML = "<p style=\"position:absolute; top:0;\">Hello JavaScript!<p>";
+			while(animdiv.firstChild){
+				animdiv.removeChild(animdiv.firstChild);
+			}
+			
+			animdiv.appendChild(newp);
 		}, 1000);
 		
 </script>
