--- a/main.html
+++ b/main.html
@@ -27,6 +27,7 @@
 </head>
 <body>
 
+	<div id="character" style="position:fixed; left:0; top:0;">@</div>
 	<div id="new-grid-div"></div>
 
 <script>
@@ -113,6 +114,35 @@
 		} 
 		return grid;
 	}
+	
+	window.addEventListener("keydown", (event) => {
+		//console.log("" + event.key + " " + event.keyIdentifier + " " + event.keyCode);
+		//event.key will respect shift, the keycode shows code from capital letter
+		let player = document.getElementById("character");
+		let x = parseInt(player.style.left);
+		let y = parseInt(player.style.top);
+		console.log(event.keyCode);
+		switch(event.keyCode){
+			case 68://D
+				x += 2;
+				console.log("D");
+				break;
+			case 83://S
+				y += 2;
+				break;
+			case 65://A
+				x -= 2;
+				break;
+			case 87://W
+				y -= 2;
+				break;
+		}
+		
+		player.style.left = x + "px";
+		player.style.top  = y + "px";
+		
+	}, true);
+	
 	
 	// sprites are defined as objects with:
 	// name,
