--- a/main.html
+++ b/main.html
@@ -92,7 +92,7 @@
 		let grid = create_grid(
 									x, 
 									y, 
-									x*1.5 + "ch", 
+									x*.8 + "em", 
 									y*1.2 + "em"
 									);
 		let node;
@@ -119,27 +119,27 @@
 		//console.log("" + event.key + " " + event.keyIdentifier + " " + event.keyCode);
 		//event.key will respect shift, the keycode shows code from capital letter
 		let player = document.getElementById("character");
-		let x = parseInt(player.style.left);
-		let y = parseInt(player.style.top);
+		let x = parseFloat(player.style.left);
+		let y = parseFloat(player.style.top);
 		console.log(event.keyCode);
+		let dx=0,dy=0;
 		switch(event.keyCode){
 			case 68://D
-				x += 2;
-				console.log("D");
+				dx += .5;
 				break;
 			case 83://S
-				y += 2;
+				dy += .5;
 				break;
 			case 65://A
-				x -= 2;
+				dx -= .5;
 				break;
 			case 87://W
-				y -= 2;
+				dy -= .5;
 				break;
 		}
 		
-		player.style.left = x + "px";
-		player.style.top  = y + "px";
+		player.style.left = dx*0.8 + x + "em";
+		player.style.top  = dy*1.2 + y + "em";
 		
 	}, true);
 	
