offset the original position of player placeholder

--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 
-	<div id="character" style="position:fixed; left:0; top:0;">@</div>
+	<div id="character" style="position:fixed; left:0.4em; top:0.6em;">@</div>
 	<div id="new-grid-div"></div>
 
 <script>
