--- a/main.html
+++ b/main.html
@@ -185,7 +185,7 @@
 			name: "Grass",
 			background:"aquamarine",
 			chars:[{
-					ch: "&#x22ce",
+					ch: String.fromCodePoint(0x22ce),
 					color: "green",
 					offsetX: .05,
 					offsetY: -.6
@@ -209,7 +209,7 @@
 					offsetY: -.3
 					},
 					{
-					ch: "&#x13dc",
+					ch: String.fromCodePoint(0x13dc),
 					color: "green",
 					offsetX: -.2,
 					offsetY: -.8
@@ -221,7 +221,7 @@
 			name: "Dirt",
 			background: "antiquewhite",
 			chars:[{
-					ch: "&#x289e",
+					ch: String.fromCodePoint(0x289e),
 					color: "sandybrown",
 					offsetX: .0,
 					offsetY: -.8
@@ -233,13 +233,13 @@
 			name: "Water",
 			background: "#94a8d4",
 			chars:[{
-				ch: "&#x2248",
+				ch: String.fromCodePoint(0x2248),
 				color: "blue",
 				offsetX: 0,
 				offsetY: -.3
 				},
 				{
-				ch: "&#x2248",
+				ch: String.fromCodePoint(0x2248),
 				color: "blue",
 				offsetX: 0,
 				offsetY: -.8
@@ -274,7 +274,7 @@
 	let gridarray = new Array(gridy);
 	for(let i=0; i<gridy; i++) gridarray[i] = new Array(gridx).fill(0);
 	
-	//newgrid.appendChild(mapnode_from_array(gridarray, tileset, sprites));
+	newgrid.appendChild(mapnode_from_array(map, tileset, sprites));
 	
 	
 	let canvas  = document.getElementById("canvas_element");
@@ -304,6 +304,28 @@
 			console.log(i*32);
 			tileset_context.fillRect(i*32,0,32,48);
 		}
+		
+		let spr;
+		let i = 0;
+		let p = document.createElement("p");
+		tileset_context.font = "32px sans-serif";
+		tileset_context.textAlign = "center";
+		for(t of tileset){
+			//if (i == 1 )return;
+			for(s of sprites){
+				if(t == s.name){
+					spr = s;
+				}
+			}
+			tileset_context.fillStyle = spr.background;
+			tileset_context.fillRect(i*32,0,32,48);
+			for(c of spr.chars){
+				tileset_context.fillStyle = c.color;
+				tileset_context.fillText(c.ch, 16 + ((.2*c.offsetX + i)*32) ,50 + (25*c.offsetY));
+			}
+			i++;
+		}
+		
 
 	}
 	
@@ -311,6 +333,7 @@
 	let frame_length = 1000./ maxfps;
 	let last_frame_stamp = 0;
 	let frame_delta = frame_length;
+	
 	function gameLoop(timestamp){
 		frame_delta = last_frame_stamp + frame_length;
 		if(timestamp < frame_delta){
