--- a/main.html
+++ b/main.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Page Title</title>
+	<script src="tiles.js"></script>
 	<meta charset=utf-8>
 	<style rel="stylesheet" type="text/css">
 		.grid-con{
@@ -48,7 +49,7 @@
 	</div>
 	
 <script>
-	
+	import {tiles} from "tiles.js";
 	window.addEventListener("keydown", (event) => {
 		//console.log("" + event.key + " " + event.keyIdentifier + " " + event.keyCode);
 		//event.key will respect shift, the keycode shows code from capital letter
